[workspace]
members = [
	"bin/node/cli",
	"bin/node/inspect",
	"bin/node/primitives",
	"bin/node/runtime",
#	"bin/utils/subkey",
	"brml/assets",
	"brml/assets/rpc",
	"brml/bridge-eos",
	"brml/chainlink",
	"brml/convert",
	"brml/convert/rpc",
	"brml/oracle",
	"brml/proxy-validator",
	"brml/swap",
	"brml/voucher",
]

[profile.release]
panic = "unwind"

[patch.crates-io]
frame-support = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
frame-system = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-elections-phragmen = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-staking = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-session = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-grandpa = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-authorship = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-finality-tracker = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-timestamp = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
pallet-babe = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-runtime = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-keyring = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-storage = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-core = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-externalities = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-io = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-application-crypto = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-staking = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-version = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-inherents = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-api = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-consensus-babe = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-consensus = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-transaction-pool = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-blockchain = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-rpc = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-trie = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-utils = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-state-machine = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-block-builder = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-finality-grandpa = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-offchain = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-chain-spec = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sp-session = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-executor = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-finality-grandpa = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-consensus-babe = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-consensus-babe-rpc = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-consensus-epochs = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-client-api = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-block-builder = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-network = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-light = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-transaction-pool = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-client-db = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-service = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-cli = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-telemetry = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-rpc-api = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-keystore = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }
sc-chain-spec = { git = "https://github.com/bifrost-finance/substrate.git", branch = "jamie-consensus" }

# use local crates for debug
#frame-support = { path = "/Volumes/Bifrost/consensus/substrate/frame/support" }
#frame-system = { path = "/Volumes/Bifrost/consensus/substrate/frame/system" }
#pallet-elections-phragmen = { path = "/Volumes/Bifrost/consensus/substrate/frame/elections-phragmen" }
#pallet-staking = { path = "/Volumes/Bifrost/consensus/substrate/frame/staking" }
#pallet-session = { path = "/Volumes/Bifrost/consensus/substrate/frame/session" }
#pallet-grandpa = { path = "/Volumes/Bifrost/consensus/substrate/frame/grandpa" }
#pallet-authorship = { path = "/Volumes/Bifrost/consensus/substrate/frame/authorship" }
#pallet-finality-tracker = { path = "/Volumes/Bifrost/consensus/substrate/frame/finality-tracker" }
#pallet-timestamp = { path = "/Volumes/Bifrost/consensus/substrate/frame/timestamp" }
#pallet-babe = { path = "/Volumes/Bifrost/consensus/substrate/frame/babe" }
#sp-runtime = { path = "/Volumes/Bifrost/consensus/substrate/primitives/runtime" }
#sp-keyring = { path = "/Volumes/Bifrost/consensus/substrate/primitives/keyring" }
#sp-storage = { path = "/Volumes/Bifrost/consensus/substrate/primitives/storage" }
#sp-core = { path = "/Volumes/Bifrost/consensus/substrate/primitives/core" }
#sp-externalities = { path = "/Volumes/Bifrost/consensus/substrate/primitives/externalities" }
#sp-io = { path = "/Volumes/Bifrost/consensus/substrate/primitives/io" }
#sp-application-crypto = { path = "/Volumes/Bifrost/consensus/substrate/primitives/application-crypto" }
#sp-staking = { path = "/Volumes/Bifrost/consensus/substrate/primitives/staking" }
#sp-version = { path = "/Volumes/Bifrost/consensus/substrate/primitives/version" }
#sp-inherents = { path = "/Volumes/Bifrost/consensus/substrate/primitives/inherents" }
#sp-api = { path = "/Volumes/Bifrost/consensus/substrate/primitives/api" }
#sp-consensus-babe = { path = "/Volumes/Bifrost/consensus/substrate/primitives/consensus/babe" }
#sp-consensus = { path = "/Volumes/Bifrost/consensus/substrate/primitives/consensus/common" }
#sp-transaction-pool = { path = "/Volumes/Bifrost/consensus/substrate/primitives/transaction-pool" }
#sp-blockchain = { path = "/Volumes/Bifrost/consensus/substrate/primitives/blockchain" }
#sp-rpc = { path = "/Volumes/Bifrost/consensus/substrate/primitives/rpc" }
#sp-trie = { path = "/Volumes/Bifrost/consensus/substrate/primitives/trie" }
#sp-utils = { path = "/Volumes/Bifrost/consensus/substrate/primitives/utils" }
#sp-state-machine = { path = "/Volumes/Bifrost/consensus/substrate/primitives/state-machine" }
#sp-block-builder = { path = "/Volumes/Bifrost/consensus/substrate/primitives/block-builder" }
#sp-finality-grandpa = { path = "/Volumes/Bifrost/consensus/substrate/primitives/finality-grandpa" }
#sp-offchain = { path = "/Volumes/Bifrost/consensus/substrate/primitives/offchain" }
#sp-chain-spec = { path = "/Volumes/Bifrost/consensus/substrate/primitives/chain-spec" }
#sp-session = { path = "/Volumes/Bifrost/consensus/substrate/primitives/session" }
#sc-executor = { path = "/Volumes/Bifrost/consensus/substrate/client/executor" }
#sc-finality-grandpa = { path = "/Volumes/Bifrost/consensus/substrate/client/finality-grandpa" }
#sc-consensus-babe = { path = "/Volumes/Bifrost/consensus/substrate/client/consensus/babe" }
#sc-consensus-babe-rpc = { path = "/Volumes/Bifrost/consensus/substrate/client/consensus/babe/rpc" }
#sc-consensus-epochs = { path = "/Volumes/Bifrost/consensus/substrate/client/consensus/epochs" }
#sc-client-api = { path = "/Volumes/Bifrost/consensus/substrate/client/api" }
#sc-block-builder = { path = "/Volumes/Bifrost/consensus/substrate/client/block-builder" }
#sc-network = { path = "/Volumes/Bifrost/consensus/substrate/client/network" }
#sc-light = { path = "/Volumes/Bifrost/consensus/substrate/client/light" }
#sc-transaction-pool = { path = "/Volumes/Bifrost/consensus/substrate/client/transaction-pool" }
#sc-client-db = { path = "/Volumes/Bifrost/consensus/substrate/client/db" }
#sc-service = { path = "/Volumes/Bifrost/consensus/substrate/client/service" }
#sc-cli = { path = "/Volumes/Bifrost/consensus/substrate/client/cli" }
#sc-telemetry = { path = "/Volumes/Bifrost/consensus/substrate/client/telemetry" }
#sc-rpc-api = { path = "/Volumes/Bifrost/consensus/substrate/client/rpc-api" }
#sc-rpc = { path = "/Volumes/Bifrost/consensus/substrate/client/rpc" }
#sc-keystore = { path = "/Volumes/Bifrost/consensus/substrate/client/keystore" }
#sc-chain-spec = { path = "/Volumes/Bifrost/consensus/substrate/client/chain-spec" }
