[package]
name = "brml-assets"
version = "0.4.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
serde = { version = "1.0.106", optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

[features]
default = ["std"]
std = [
	"codec/std",
	"node-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
