[package]
name = "brml-convert"
version = "0.4.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
serde = { version = "1.0.106", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

[dev-dependencies]
assets = { package = "brml-assets", path = "../assets" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

[features]
default = ["std"]
std = [
	"codec/std",
	"node-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"serde/std",
	"sp-runtime/std",
]
