[package]
name = "brml-crowd-fund"
version = "0.6.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
serde = { version = "1.0.106", optional = true }
sp-runtime = { version = "2.0.0", default-features = false }

[dev-dependencies]
assets = { package = "brml-assets", path = "../assets" }
pallet-balances = "2.0.0"
sp-core = "2.0.0"
sp-io = "2.0.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "node-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "serde/std",
    "sp-runtime/std",
]
