[package]
name = "brml-proxy-validator"
version = "0.4.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

[dev-dependencies]
assets = { package = "brml-assets", path = "../assets" }
sp-core = "2.0.0-rc4"
sp-io = "2.0.0-rc4"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"node-primitives/std",
	"sp-runtime/std",
	"sp-std/std",
]
