[package]
name = "brml-voucher"
version = "0.4.0"
authors = ["alexgituser <alexgituser@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
serde = { version = "1.0.106", optional = true }
serde_json = { version = "1.0.52", default-features = false, features = ["alloc"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"frame-support/std",
	"serde/std",
	"serde_json/std",
	"sp-runtime/std",
]
