[package]
name = "brml-convert-rpc"
version = "0.4.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
convert-rpc-runtime-api = { package = "brml-convert-rpc-runtime-api", path = "./runtime-api" }
jsonrpc-core = "14.0.5"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.5"
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
