[package]
name = "brml-assets-rpc-runtime-api"
version = "0.4.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
]
